--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -2,7 +2,7 @@ version: "2"
 sql:
   - schema: migrations
     queries: internal/query/query.sql
-    engine: postgresql
+    engine: sqlite
     gen:
       go:
         out: internal/query
